# megabaeckerei-clients

./: CMakeLists.txt
src/: MixTank.cpp  MixTank.h  Mixer.cpp  Mixer.h  Oven.cpp  Oven.h  SocketHandler.cpp  SocketHandler.h  WaterTank.cpp  WaterTank.h  main.cpp
